--- a/src/main/resources/changelog/changeset/create_table_role.yaml
+++ b/src/main/resources/changelog/changeset/create_table_role.yaml
@@ -21,3 +21,34 @@ databaseChangeLog:
               - column:
                   name: description
                   type: varchar(255)
+  - changeSet:
+      id: 12
+      author: Ilnytskyi
+      changes:
+        - insert:
+            tableName: role
+            columns:
+              - column:
+                  name: name
+                  value: "ADMIN"
+              - column:
+                  name: description
+                  value: "Admin role"
+        - insert:
+            tableName: role
+            columns:
+              - column:
+                  name: name
+                  value: "USER"
+              - column:
+                  name: description
+                  value: "User role"
+        - insert:
+            tableName: role
+            columns:
+              - column:
+                  name: name
+                  value: "MANAGER"
+              - column:
+                  name: description
+                  value: "Manager role"
